# ScannerCode-barre

./: CMakeLists.txt  main.cpp  myport.cpp  myport.h
